--- a/public/stylesheets/master.css
+++ b/public/stylesheets/master.css
@@ -6,7 +6,8 @@ p                              { margin: 20px 0; }
 
 #header                        { padding: 15px; width: 800px; margin: 0 auto; margin-top: 10px; margin-bottom: -60px; text-align: center; }
 
-#ad                            { text-transform: uppercase; font-size: 0.6em; margin-right: 200px; float:right; width: 170px; border-top-right-radius: 4px; border-top-left-radius: 4px; border-top: solid 1px #ccc; border-left: solid 1px #ccc; border-right: solid 1px #ccc; font-weight: bold; color: #777; text-align: center; height: 2.0em; }
+#ad1                            { text-transform: uppercase; font-size: 0.6em; margin-right: 180px; float:right; width: 170px; border-top-right-radius: 4px; border-top-left-radius: 4px; border-top: solid 1px #ccc; border-left: solid 1px #ccc; border-right: solid 1px #ccc; font-weight: bold; color: #777; text-align: center; height: 2.0em; }
+#ad                            { text-transform: uppercase; font-size: 0.6em; margin-right: 10px; float:right; width: 170px; border-top-right-radius: 4px; border-top-left-radius: 4px; border-top: solid 1px #ccc; border-left: solid 1px #ccc; border-right: solid 1px #ccc; font-weight: bold; color: #777; text-align: center; height: 2.0em; }
 #ad a                          { color: #444; }
 
 #content                       { float:left; width: 800px; background-color: #f5f5f5; padding: 14px; border: solid 1px #ccc; min-height: 200px; }
