Added a script for generating project notes.
This searches through the projects' code looking for TODOs/FIXMEs and OPTIMIZEs and
links to redmine to allow easy viewing.

On branch: master

--- a/app/views/projects/edit.html.haml
+++ b/app/views/projects/edit.html.haml
@@ -9,6 +9,9 @@
     %ul
       %li= "<tt><b>%build_dir%</b> directory where build is checked out</tt>".html_safe
       %li= "<tt><b>%project_dir%</b> directory shared by all builds in project</tt>".html_safe
+      %li= "<tt><b>%setup_build%</b> script to setup the project</tt>".html_safe
+      %li= "<tt><b>%project_notes%</b> generate a listing of all notes found in project</tt>".html_safe
+      %li= "<tt><b>%hook_name%</b> hook name for the project</tt>".html_safe
     = "You can comment a step with <tt>#</tt>".html_safe
 
 %h2 Available configurations
