--- a/app/views/builds/_step.html.haml
+++ b/app/views/builds/_step.html.haml
@@ -12,5 +12,6 @@
       - step.all.each do |type, text|
         - if (type != BigTuna::Runner::Output::TYPE_STDERR or params[:stderr])
           - txt_line = strip_shell_colorization(text)
+          - txt_line = txt_line[1..-1].html_safe if txt_line[0] == ?!
           %span{:class => "#{type} #{css_class_for_line(txt_line)}"}= txt_line
 %br
