added specific css styles used in the build output listing
On branch: gorenje_master

--- a/public/stylesheets/master.css
+++ b/public/stylesheets/master.css
@@ -64,3 +64,13 @@ p                              { margin: 20px 0; }
 form button                    { border: 0; }
 
 #ajax-reload                   { display:none; }
+
+pre .sbinfo { color: #E3F; }
+pre .sberror { color: red; }
+pre .sbaction { color: yellow; }
+pre .sbwarning { color: orange; }
+pre .sbwtf { color: red; text-decoration: blink; }
+
+pre .pnfilelink { color: orange; }
+pre .pnlinenum { color: white; }
+pre .pnrevlink { color: yellow; }
