Added styling for projects that are used for spacing. Spacer projects are those that have a name beginning with '=='. These should not be used for testing and their sole purpose in life is to act as spacers between testing projects.
On branch: master

--- a/public/stylesheets/master.css
+++ b/public/stylesheets/master.css
@@ -74,3 +74,5 @@ pre .sbwtf { color: red; text-decoration: blink; }
 pre .pnfilelink { color: orange; }
 pre .pnlinenum { color: white; }
 pre .pnrevlink { color: yellow; }
+
+h3.center { color: blue; text-align: center;}
