--- a/app/views/projects/_projects.html.haml
+++ b/app/views/projects/_projects.html.haml
@@ -8,7 +8,10 @@
         .updown
           = link_to("&uarr;".html_safe, arrange_project_path(project, :up => true)) unless project.first?
           = link_to("&darr;".html_safe, arrange_project_path(project, :down => true)) unless project.last?
-      %h3= link_to(project.name, project_path(project))
+      - if project.is_spacer?
+        %h3.center= project.name
+      - else
+        %h3= link_to(project.name, project_path(project))
       - if project.recent_build
         %table.value_list
           = render :partial => "builds/build_data", :locals => {:build => project.recent_build}
