--- a/app/views/projects/_builds.html.haml
+++ b/app/views/projects/_builds.html.haml
@@ -1,6 +1,6 @@
 #builds
   #ajax-reload= @project.ajax_reload?
-  - @builds.each do |build|      
+  - @builds.each do |build|
     %div{:class => "#{build.status} project", :id => dom_id(build)}
       - unless BigTuna.read_only?
         .info
@@ -9,3 +9,8 @@
       %h3= link_to(build.display_name, build_path(build, :stderr => build.status == Build::STATUS_OK ? nil : 1))
       %table.value_list
         = render :partial => "builds/build_data", :locals => {:build => build}
+        - if build.finished?
+          %tr
+            %td.title Duration
+            %td.value= build_duration(build)
+
